# liquidity

./: .dockerignore  .gitignore  README.md  docker-compose.dev.yml  docker-compose.prod.yml  pyproject.toml
bet_manager/: Dockerfile.prod  __main__.py  entrypoint.sh  setup_django_orm.py
proxy/nginx/conf_dev/: nginx.conf
proxy/nginx/conf_prod/: nginx.conf
scripts/: renew-ssl.sh  setup-ssl.sh  start-dev.sh  start-prod.sh  stop-dev.sh  stop-prod.sh
telegram_bot/: Dockerfile.dev  Dockerfile.prod  __main__.py  entrypoint.sh
webapp/: Dockerfile.dev  Dockerfile.prod  entrypoint.sh  gunicorn.conf.py
webapp/core/: api.py  api_views.py  blocks.py  forms.py  models.py  serializers.py  urls.py  views.py
webapp/core/dex/: dex.py  pancakeswap_const.py
webapp/core/static/css/: FAQ.css  deposit.css  index.css  index.css.map  login.css  login.css.map  nav.css  nav.css.map  private_key.css  profile.css  sell.css  sign-up.css  sign-up.css.map  style.css  style.css.map  transaction_history.css
webapp/core/static/scripts/: banner.js  clock.js  key.js  nav.js  profile.js  theme.js
webapp/core/templates/: base.html  bet.html  deposit.html  index.html  login.html  private_key.html  profile.html  register.html  sell.html  transaction_history.html
webapp/core/templates/faq/: profile.html
webapp/core/wallet/: const.py  token_abi.py  wallet.py
webapp/webapp/: settings.py  urls.py
