[tool.poetry]
package-mode = false
name = "liquidity"
version = "0.1.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
pytonlib = "^0.0.63"
setuptools = "^75.1.0"
djangorestframework = "^3.15.2"
drf-yasg = "^1.21.8"

[tool.poetry.group.webapp.dependencies]
django = "^5.1.1"
gunicorn = "^23.0.0"
django-cors-headers = "^4.5.0"
moralis = "^0.1.49"
web3 = "^7.3.0"
eth-account = "^0.13.4"

[tool.poetry.group.telegram_bot.dependencies]
python-telegram-bot = "^21.5"

[tool.poetry.group.bet_manager.dependencies]
django = "^5.1.1"
django-cors-headers = "^4.5.0"
moralis = "^0.1.49"
web3 = "^7.3.0"
eth-account = "^0.13.4"


[tool.poetry.group.dev.dependencies]
django-stubs = "^5.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
